--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "nuxt": "^2.14.6",
-    "tailwindcss": "^1.8.10"
+    "nuxt": "^2.14.6"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^3.1.0"
   }
 }
