--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nuxt start"
   },
   "dependencies": {
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-smooth-reflow": "^0.1.12"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.1.0"
