--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "vue-smooth-reflow": "^0.1.12"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/tailwindcss": "^3.1.0",
     "@vue/test-utils": "^1.1.0",
     "babel-jest": "^26.3.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-only-warn": "^1.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.2",
+    "prettier": "^2.1.2",
     "vue-jest": "^4.0.0-0"
   }
 }
